fixed background image shading on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3465,8 +3465,6 @@ input, select, textarea {
 
 			#banner {
 				padding: 7em 0 8.25em 0 ;
-				background-color: #363848;
-				background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("#");
 				background-size: auto,
  cover;
 				background-position: center,
